# jdll-unet

./: .gitignore  CONTRIBUTING.md  ISSUE_FIXED_TRAINING_STEPS_PER_EPOCH.md  ISSUE_GAUSSIAN_INFERENCE_AND_OOM_FALLBACK.md  README.md  README_BMP_COMPATIBILITY_REQUIREMENTS.md  README_DEEPICY_PRESETS.md  README_EMPTY_PATCH_POLICY.md  README_INFERENCE_CALLBACK_REQUIREMENTS.md  jdll-unet-backend-plan.md  pyproject.toml
.github/workflows/: ci.yml
jdll_unet/: __init__.py  appose_api.py  augment.py  callbacks.py  config.py  dataset.py  errors.py  infer.py  io.py  losses.py  metrics.py  model.py  planning.py  postprocess.py  scale.py  schedulers.py  semantic_scale.py  targets.py  task_detect.py  trainer.py
tests/: test_hardening.py  test_io.py  test_planning_instances.py  test_schedulers.py  test_task_targets_augment.py  test_training_inference.py
