[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jdll-unet"
version = "0.1.0"
description = "JDLL-owned lightweight UNet training and inference backend."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "torch",
  "tifffile",
  "imageio",
  "scipy",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["jdll_unet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
